# kimi-code-bot

./: .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml
.github/workflows/: kimi-bot.yml  kimi-code-bot.yml  publish.yml
demo/: user_service.py
examples/: smoke_backend.py
src/kimi_code_bot/: __init__.py  agent.py  cli.py  config.py  diff.py  event.py  findings.py  github.py  orchestrator.py  pipeline.py  prompt.py  report.py  state.py  types.py
src/kimibot/: __init__.py  agent.py  cli.py  config.py  event.py  findings.py  github.py  mention.py  orchestrator.py  pipeline.py  prompt.py  report.py  state.py  types.py
tests/: test_agent.py  test_diff.py  test_event.py  test_findings.py  test_github.py  test_pipeline.py  test_prompt.py  test_report.py  test_state.py
