[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-code-bot"
version = "0.0.1"
description = "Repo-aware AI code review bot powered by kimi-cli"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "kimi-cli>=1.49",
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
kimi-code-bot = "kimi_code_bot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_code_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"
